[package]
name = "fdutil"
version = "1.0.0"
edition = "2018"
description = "Fdgl utils"
authors = ["Dev Team <dev@miczone.asia>", "Paul Pham <paul@miczone.asia>"]
documentation = "https://api.fadov2.global/documentation"
license-file = "LICENSE.txt"
keywords = ["api", "fado", "fdgl"]
include = ["src/*", "src/**/*", "Cargo.toml"]
homepage = "https://api.fadov2.global/"
repository = "https://gitlab.com/fdcoin/fdglapir"
publish = false

[lib]
doctest = false
test = false

[dependencies]
wasm-bindgen = "~0.2"
time = "~0.2"
uuid = "~0.8"
futures         = "~0.3"
env_logger      = "~0.8"
rand            = "~0.8"
json            = "~0.12"
frank_jwt = "~3"

[build-dependencies]
bindgen = "~0.58"

[[bin]]
name = "fdgl_util_test"
path="./src/bin/main.rs"
test = false