[package]
name = "fdutil"
version = "1.0.0"
edition = "2018"
description = "Fdgl utils"
authors = ["Dev Team <dev@miczone.asia>", "Paul Pham <paul@miczone.asia>"]
documentation = "https://github.com/miczone/fdrust/wiki"
license-file = "LICENSE.txt"
keywords = ["api", "fado", "fdgl"]
include = ["src/*", "src/**/*", "Cargo.toml"]
homepage = "https://github.com/miczone/fdrust/"
repository = "https://github.com/miczone/fdrust"
publish = true
build = "build.rs"

[lib]
name = "fdutil"
doctest = false
test = false
crate-type = ["lib", "staticlib", "cdylib"]

[features]
with-bytes = ["bytes"]
with-serde = ["serde", "serde_derive"]
default = []

[dependencies]
bytes = { version = "~1.0", optional = true }
serde        = { version = "~1.0", features = ["derive"], optional = true }
serde_derive = { version = "~1.0", optional = true }
wasm-bindgen = "~0.2"
time = "~0.2"
uuid = "~0.8"
futures         = "~0.3"
env_logger      = "~0.8"
rand            = "~0.8"
json            = "~0.12"
frank_jwt = "~3"
js-sys = "~0.3"
oauth1 = "~1"
oauth2 = "~4"

[build-dependencies]
bindgen = "~0.58"

[package.metadata.docs.rs]
all-features = true